fix: delay in output

--- a/index.html
+++ b/index.html
@@ -26,7 +26,36 @@
     <button>Submit</button>
     <a href="index.html"><img id="reload-page"src="media/reload.png" alt="reload-page"></a>
 
+    <footer class="footer">
+      <div class="footer-header">
+          <span style="font-size: 20px;">Reach me</span> | devsurajrai@gmail.com
+      </div>
+      <ul class=" list-no-bullets ">
+          <li class=" list-item-inline ">
+              <a class="link footer-link-size" href="https://github.com/devsurajrai" target="blank">
+                  <img class="social-icons"src="https://img.icons8.com/ios-filled/50/000000/github.png" />
+              </a>
+          </li>
+          <li class=" list-item-inline">
+              <a class="link footer-link-size" href="https://www.instagram.com/_surajrai_z/" target="blank">
+                  <img class="social-icons"src="https://img.icons8.com/ios-filled/50/000000/instagram-new.png" />
+              </a>
+          </li>
+          <li class=" list-item-inline">
+              <a class="link footer-link-size" href="https://www.linkedin.com/in/sr3688/" target="blank">
+                  <img class="social-icons"src="https://img.icons8.com/ios-filled/50/000000/linkedin.png" />
+              </a>
+          </li>
+          <li class="link list-item-inline">
+              <a class="link footer-link-size" href="https://twitter.com/surajrai_z" target="blank">
+                  <img class="social-icons"src="https://img.icons8.com/ios-filled/50/000000/twitter.png" />
+              </a>
+          </li>
+      </ul>
+  </footer>
+</div>
   </div>
+  
   <script src="app.js"></script>
 </body>
 
